// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Re-renders after showing the loading state 1`] = `
<FadeIn>
  <View
    style={
      Array [
        74,
        "",
      ]
    }
  >
    <View
      className=""
      style={
        Array [
          76,
          Object {},
          "",
        ]
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        style={Object {}}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </View>
    <View
      className=""
      style={
        Array [
          78,
          "",
        ]
      }
    >
      <span>
        Re-render me
      </span>
    </View>
  </View>
</FadeIn>
`;

exports[`Render a Card 1`] = `
<FadeIn>
  <View
    style={
      Array [
        74,
        "",
      ]
    }
  >
    <View
      className=""
      style={
        Array [
          76,
          Object {},
          "",
        ]
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        style={Object {}}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </View>
    <View
      className=""
      style={
        Array [
          78,
          "",
        ]
      }
    >
      <span>
        A card
      </span>
    </View>
  </View>
</FadeIn>
`;

exports[`Render a loading Card 1`] = `
<View
  style={74}
>
  <View
    className=""
    style={
      Array [
        76,
        "",
      ]
    }
  >
    <TimesImage
      aspectRatio={0.6666666666666666}
      style={Object {}}
      uri=""
    />
  </View>
  <View
    className=""
    style={
      Array [
        78,
        "",
      ]
    }
  >
    <Gradient
      degrees={264}
      style={
        Array [
          80,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
          82,
        ]
      }
    />
  </View>
</View>
`;

exports[`Render a loading Card 2`] = `
<View
  style={74}
>
  <View
    className=""
    style={
      Array [
        78,
        "",
      ]
    }
  >
    <Gradient
      degrees={264}
      style={
        Array [
          80,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
          82,
        ]
      }
    />
  </View>
</View>
`;

exports[`Render a loading Card 3`] = `
<View
  style={74}
>
  <View
    className=""
    style={
      Array [
        78,
        79,
      ]
    }
  >
    <Gradient
      degrees={264}
      style={
        Array [
          80,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
        ]
      }
    />
    <Gradient
      degrees={267}
      style={
        Array [
          81,
          82,
        ]
      }
    />
  </View>
  <View
    className=""
    style={
      Array [
        76,
        77,
      ]
    }
  >
    <TimesImage
      aspectRatio={0.6666666666666666}
      style={Object {}}
      uri=""
    />
  </View>
</View>
`;

exports[`Render the loading state 1`] = `
<Loading
  contentContainerClass=""
  imageContainerClass=""
  imageRatio={0.6666666666666666}
  isReversed={false}
  showImage={true}
/>
`;

exports[`Renders Card normally and does not re-render 1`] = `
<FadeIn>
  <View
    style={
      Array [
        74,
        "",
      ]
    }
  >
    <View
      className=""
      style={
        Array [
          76,
          Object {},
          "",
        ]
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        style={Object {}}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </View>
    <View
      className=""
      style={
        Array [
          78,
          "",
        ]
      }
    >
      <span>
        Do not re-render me
      </span>
    </View>
  </View>
</FadeIn>
`;

exports[`Renders a Card with a reversed layout 1`] = `
<FadeIn>
  <View
    style={
      Array [
        74,
        75,
      ]
    }
  >
    <View
      className=""
      style={
        Array [
          78,
          79,
        ]
      }
    >
      <span>
        A card
      </span>
    </View>
    <View
      className=""
      style={
        Array [
          76,
          Object {},
          77,
        ]
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        style={Object {}}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </View>
  </View>
</FadeIn>
`;

exports[`Renders without an image 1`] = `
<FadeIn>
  <View
    style={
      Array [
        74,
        "",
      ]
    }
  >
    <View
      className=""
      style={
        Array [
          78,
          "",
        ]
      }
    >
      <span>
        No image
      </span>
    </View>
  </View>
</FadeIn>
`;

exports[`Renders without an image URL 1`] = `
<FadeIn>
  <View
    style={
      Array [
        74,
        "",
      ]
    }
  >
    <View
      className=""
      style={
        Array [
          78,
          "",
        ]
      }
    >
      <span>
        No URL
      </span>
    </View>
  </View>
</FadeIn>
`;

exports[`Renders without an image when showImage is false 1`] = `
<FadeIn>
  <View
    style={
      Array [
        74,
        "",
      ]
    }
  >
    <View
      className=""
      style={
        Array [
          78,
          "",
        ]
      }
    >
      <span>
        No image
      </span>
    </View>
  </View>
</FadeIn>
`;
